# fish-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
crates/fish-adapter/: Cargo.toml
crates/fish-adapter/data/: fish_auth.json
crates/fish-adapter/src/: adapter.rs  fish.rs  lib.rs
crates/fish-adapter/src/fish/: adapter.rs  api.rs  auth.rs  connection.rs  protocol.rs  sign.rs
crates/fish-bot/: Cargo.toml
crates/fish-bot/src/: bootstrap.rs  bot.rs  echo_plugin.rs  lib.rs  main.rs
crates/fish-core/: Cargo.toml
crates/fish-core/src/: adapter.rs  ctx.rs  error.rs  event.rs  lib.rs  message.rs  rule.rs  telemetry.rs
crates/fish-plugin/: Cargo.toml
crates/fish-plugin-macros/: Cargo.toml
crates/fish-plugin-macros/src/: lib.rs
crates/fish-plugin-sdk/: Cargo.toml
crates/fish-plugin-sdk/src/: builder.rs  context.rs  lib.rs  prelude.rs
crates/fish-plugin/src/: lib.rs  loader.rs  plugin.rs
crates/fish-plugin/src/plugin/: actor.rs  echo.rs
crates/fish-rt-adapter/: Cargo.toml
crates/fish-rt-adapter/src/: adapter.rs  api.rs  auth.rs  client.rs  connection.rs  lib.rs  protocol.rs  sign.rs
crates/fish-runtime/: Cargo.toml
crates/fish-runtime/src/: actor.rs  bot.rs  builder.rs  bus.rs  context.rs  fish.rs  handlers.rs  host.rs  lib.rs  loader.rs  messages.rs  plugin.rs  prelude.rs  runtime.rs
crates/fish-runtime/src/actor/: task_runner.rs
crates/fish-runtime/src/fish/: adapter.rs  api.rs  auth.rs  protocol.rs
examples/fish-app/: Cargo.toml  README.md
examples/fish-app/src/: main.rs
examples/fish-app/src/app/: bootstrap.rs  plugin.rs
examples/quickstart/: Cargo.toml  README.md
examples/quickstart-custom/: Cargo.toml  README.md
examples/quickstart-custom/src/app/: bootstrap.rs  plugin.rs
examples/quickstart-simple/: Cargo.toml  README.md
examples/quickstart-simple/src/: main.rs
examples/quickstart-simple/src/app/: bootstrap.rs  mod.rs  plugin.rs
examples/quickstart/src/: main.rs
examples/quickstart/src/app/: bootstrap.rs  local_adapter.rs  mod.rs  plugin.rs
src/: adapter.rs  bot.rs  ctx.rs  error.rs  lib.rs  logger.rs  main.rs  message.rs  model.rs  protocol.rs  rule.rs
src/adapter/fish/: api.rs  auth.rs  mod.rs  protocol.rs  sign.rs
src/plugin/: actor.rs  echo.rs  mod.rs
tests/: adapter_test.rs  fish_rt_adapter_api_test.rs  model_test.rs  protocol_test.rs
