[package]
name = "fish-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
once_cell = "1"
async-trait = "0.1.89"
futures = "0.3.32"
urlencoding = "2.1.3"
