[package]
name = "fish-bot-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fish-core = { workspace = true }
fish-runtime = { workspace = true }
fish-rt-adapter = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[workspace]
members = [
    "crates/fish-core",
    "crates/fish-runtime",
    "crates/fish-plugin-macros",
    "crates/fish-rt-adapter",
    "examples/quickstart-simple",
    "examples/quickstart-custom",
]
resolver = "2"

[workspace.dependencies]
# --- runtime ---
tokio = { version = "1", features = ["full"] }
kameo = "0.20"

# --- serialization ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- network ---
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tungstenite = "0.23"
futures = "0.3.32"

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- utilities ---
snafu = "0.8"
parking_lot = "0.12"
base64 = "0.22"
async-trait = "0.1.89"
regex = "1"
urlencoding = "2.1.3"
qrcode = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
md5 = "0.7"
rmp-serde = "1.3"
clap = { version = "4.5", features = ["derive"] }

# --- internal ---
fish-core = { path = "crates/fish-core" }
fish-runtime = { path = "crates/fish-runtime" }
fish-plugin-macros = { path = "crates/fish-plugin-macros" }
fish-rt-adapter = { path = "crates/fish-rt-adapter" }
