[package]
name = "fish-adapter"
version = "0.1.0"
edition = "2024"
description = "Adapter abstraction + Fish platform implementation"

[dependencies]
fish-core = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
anyhow = { workspace = true }
