[package]
name = "fish-core"
version = "0.1.0"
edition = "2024"
description = "Core types for fish-bot: message, event, rule, ctx, error, logger"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
