[package]
name = "fish-plugin-sdk"
version = "0.1.0"
edition = "2024"
description = "Plugin SDK for fish-bot"

[dependencies]
fish-core = { workspace = true }
fish-adapter = { workspace = true }
fish-plugin = { workspace = true }
fish-runtime = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
fish-plugin-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
