[package]
name = "fish-runtime"
version = "0.1.0"
edition = "2024"
description = "Actor runtime for fish-bot plugins"

[dependencies]
fish-core = { workspace = true }
fish-adapter = { workspace = true }
fish-plugin = { workspace = true }
kameo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
