[package]
name = "fish-runtime"
version = "0.1.0"
edition = "2024"
description = "Plugin runtime for fish"

[dependencies]
fish-core = { workspace = true }
fish-plugin-macros = { workspace = true }
kameo = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
urlencoding = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
md5 = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3"
wiremock = "0.6"
mockall = "0.14"
