[package]
name = "fish-example-quickstart-custom"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fish-rt-adapter = { workspace = true }
tokio = { workspace = true }
kameo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
