[package]
name = "fish-example-quickstart"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fish-core = { workspace = true }
fish-runtime = { workspace = true }
tokio = { workspace = true }
kameo = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
